--- a/index.html
+++ b/index.html
@@ -3,7 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Portfolio Website</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="nav-menu">
+        <h1 class="nav-title">Ma<span class="nav-title-orrange">r</span>y</h1>
+        <ul class="nav-list">
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Blog</a></li>
+          <li><button class="btn-primary">Hire Me</button></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main></main>
+
+    <footer></footer>
+  </body>
 </html>
