--- a/index.html
+++ b/index.html
@@ -38,7 +38,39 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <div class="about-section">
+        <h1 class="primary-title">About Me</h1>
+        <p class="about-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+
+        <div class="about-info-section">
+          <div class="about-info-container">
+            <h3 class="about-info-title">Name:</h3>
+            <p class="about-info">Mardy Hardy</p>
+          </div>
+          <div class="about-info-container">
+            <h3 class="about-info-title">Email:</h3>
+            <p class="about-info">info@gmail.com</p>
+          </div>
+          <div class="about-info-container">
+            <h3 class="about-info-title">Date of Birth:</h3>
+            <p class="about-info">11 November 1987</p>
+          </div>
+          <div class="about-info-container">
+            <h3 class="about-info-title">From:</h3>
+            <p class="about-info">Los Angeles, USA</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- WHAT I DO SECTION -->
+    </main>
 
     <footer></footer>
   </body>
