What I Do Section Done

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
       <div class="about-section">
         <h1 class="primary-title">About Me</h1>
-        <p class="about-description">
+        <p class="primary-description">
           I, m a designer & developer with a passion for web design. I enjoy
           developing simple, clean and slick websites that provide real value to
           the end user. Thousands of clients have procured exceptional resulfs
@@ -70,6 +70,54 @@
       </div>
 
       <!-- WHAT I DO SECTION -->
+
+      <div class="what-section">
+        <h3 class="primary-title">What I do</h3>
+        <p class="primary-description">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+        <div class="what-subsection">
+          <div class="what-subsection-container">
+            <img src="images/icons/js.png" alt="" />
+            <h2>Vanilla JavaScript</h2>
+            <p>
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="what-subsection-container">
+            <img src="images/icons/react.png" alt="" />
+            <h2>React</h2>
+            <p>
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="what-subsection-container">
+            <img src="images/icons/nodejs.png" alt="" />
+            <h2>Node.js</h2>
+            <p>
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="what-subsection-container">
+            <img src="images/icons/mongo.png" alt="" />
+            <h2>MongoDB</h2>
+            <p>
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer></footer>
