--- a/index.html
+++ b/index.html
@@ -118,6 +118,75 @@
           </div>
         </div>
       </div>
+
+      <!-- MY RESUME SECTION -->
+
+      <div class="resume-section">
+        <h1 class="primary-title">A summary of My Resume</h1>
+
+        <div class="resume-column">
+          <div>
+            <h2 class="resume-title">My Education</h2>
+            <div>
+              <h3 class="resume-degree">Master in Computer Engineering</h3>
+              <h4 class="resume-institute">Harvard University / 2015 - 2017</h4>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div>
+              <h3 class="resume-degree">Master in Computer Engineering</h3>
+              <h4 class="resume-institute">Harvard University / 2015 - 2017</h4>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div>
+              <h3 class="resume-degree">Master in Computer Engineering</h3>
+              <h4 class="resume-institute">Harvard University / 2015 - 2017</h4>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+          <div>
+            <h2 class="resume-title">My Education</h2>
+            <div>
+              <h3 class="resume-degree">Master in Computer Engineering</h3>
+              <h4 class="resume-institute">Harvard University / 2015 - 2017</h4>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div>
+              <h3 class="resume-degree">Master in Computer Engineering</h3>
+              <h4 class="resume-institute">Harvard University / 2015 - 2017</h4>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div>
+              <h3 class="resume-degree">Master in Computer Engineering</h3>
+              <h4 class="resume-institute">Harvard University / 2015 - 2017</h4>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer></footer>
