--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     </header>
 
     <main>
+      <!-- ABOUT SECTION -->
       <div class="about-section">
         <h1 class="primary-title">About Me</h1>
         <p class="primary-description">
@@ -192,6 +193,35 @@
       </div>
     </main>
 
-    <footer></footer>
+    <footer>
+      <section class="footer-section">
+        <div class="footerCol1">
+          <h1>Lets Connect</h1>
+          <p>
+            Please fill out the form on this section to contact with me or call
+            between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+          </p>
+          <img src="images/icons/facebook.png" alt="" /><img
+            src="images/icons/twitter.png"
+            alt=""
+          /><img src="images/icons/insta.png" alt="" />
+        </div>
+        <div class="footerCol2">
+          <h1>Let’s Message me</h1>
+          <form action="">
+            <input type="text" placeholder="Your Name" />
+            <input type="email" placeholder="Your Email" />
+            <textarea
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="Message"
+            ></textarea>
+            <button class="btn-primary">Submit</button>
+          </form>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
