--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/f8e7655de4.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Portfolio Website</title>
   </head>
   <body>
@@ -31,8 +35,11 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary">Download</button
-          ><button class="contact-btn">Contact</button>
+          <button class="btn-primary">
+            <i class="fa-solid fa-download"></i>Download</button
+          ><button class="contact-btn">
+            <i class="fa-solid fa-phone"></i>Contact
+          </button>
         </div>
         <img src="images/hardy.png" alt="" />
       </div>
@@ -188,7 +195,9 @@
           </div>
         </div>
         <div class="download-cv">
-          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">
+            <i class="fa-solid fa-download"></i>Download CV
+          </button>
         </div>
       </div>
     </main>
